--- a/src/PokemonStatsModal/PokemonStatsModal.css
+++ b/src/PokemonStatsModal/PokemonStatsModal.css
@@ -19,37 +19,39 @@
   width: 90vw;
 }
 
-.ModalButton {
+
+.Xbutton{
   position: absolute;
   top: 0;
-  right: 0;
-  width: 27px;
-  height: 29px;
-  opacity: 0.3;
+  right: 10px;
+  width: 23px;
+  height: 23px;
+  margin: auto 0;
+  opacity: 0.1;
+  margin-bottom: 11px;
   cursor: pointer;
-}
-/* 
-@media (max-width: 992px) {
-  .Modal {
-    width: 600px;
-  }
+
 }
 
-@media (max-width: 738px) {
-  .Modal {
-    width: 500px;
-  }
+.Xbutton:hover {
+  color: #777;
+  opacity: 0.6
 }
 
-@media (max-width: 604px) {
-  .Modal {
-    width: 400px;
-  }
+.Xbutton:before, .Xbutton:after {
+position: absolute;
+left: 9px;
+bottom: 3px;
+content: ' ';
+height: 25px;;
+width: 2px;
+background-color: #333;
+
+}
+.Xbutton:before {
+transform: rotate(45deg);
+}
+.Xbutton:after {
+transform: rotate(-45deg);
 }
 
-@media (max-width: 492px) {
-  .Modal {
-    width: 275px;
-    left: 19%;
-  }
-} */
